--- a/index.html
+++ b/index.html
@@ -169,7 +169,6 @@
 									const typingTexts = [
 										'MERN Deveoper  ',
 										'YouTuber  ',
-										'Teacher   ',
 									];
 
 									// Create a function to display the typing animation for a given text
@@ -587,7 +586,7 @@
 							<span class="icon-map-signs"></span>
 						</div>
 						<h3 class="mb-4">Address</h3>
-						<p>Bengaluru, India</p>
+						<p>Bihar, India</p>
 					</div>
 				</div>
 				<div class="col-md-6 col-lg-3 d-flex ftco-animate">
@@ -596,7 +595,7 @@
 							<span class="icon-phone2"></span>
 						</div>
 						<h3 class="mb-4">Contact Number</h3>
-						<p><a href="tel://0101010101">+ 0 101 0101 101</a></p>
+						<p><a href="tel://0101010101">+91 8210539368</a></p>
 					</div>
 				</div>
 				<div class="col-md-6 col-lg-3 d-flex ftco-animate">
@@ -605,7 +604,7 @@
 							<span class="icon-paper-plane"></span>
 						</div>
 						<h3 class="mb-4">Email Address</h3>
-						<p><a href="mailto:info@yoursite.com">conctact@domainname.com</a></p>
+						<p><a href="mailto:info@yoursite.com">kumar.jaikishan0@gmail.com</a></p>
 					</div>
 				</div>
 				<div class="col-md-6 col-lg-3 d-flex ftco-animate">
@@ -656,9 +655,7 @@
 
 					<p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 						Copyright &copy;
-						<script>document.write(new Date().getFullYear());</script> All rights reserved | This template
-						is made with <i class="icon-heart color-danger" aria-hidden="true"></i> by <a
-							href="https://colorlib.com" target="_blank">Colorlib</a>
+						<script>document.write(new Date().getFullYear());</script> All rights reserved 
 						<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 					</p>
 				</div>
